--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,14 @@ name = "quaterion"
 version = "0.1.0"
 description = "Metric Learning fine-tuning framework"
 authors = ["generall <andrey@vasnetsov.com>"]
+packages = [
+    {include = "quaterion"},
+]
+readme = "README.md"
+homepage = "https://github.com/qdrant/quaterion"
+repository = "https://github.com/qdrant/quaterion"
+keywords = ["framework", "metric-learning", "similarity", "deep-learning", "pytorch"]
+
 
 [tool.poetry.dependencies]
 python = ">=3.7,<3.10"
@@ -14,5 +22,5 @@ quaterion-models = { git = "git@github.com:qdrant/quaterion-models.git", branch 
 pytest = "^6.2.5"
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core>=1.0.0", "setuptools"]
 build-backend = "poetry.core.masonry.api"
