--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,9 @@ keywords = ["framework", "metric-learning", "similarity", "deep-learning", "pyto
 [tool.poetry.dependencies]
 python = ">=3.7,<3.10"
 torch = ">=1.8.2"
-pytorch-lightning = "^1.4.5"
+pytorch-lightning = "^1.5.8"
 quaterion-models = { git = "git@github.com:qdrant/quaterion-models.git", branch = "master" }
+loguru = "^0.5.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
