--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ keywords = ["framework", "metric-learning", "similarity", "deep-learning", "pyto
 python = ">=3.7,<3.10"
 torch = ">=1.8.2"
 pytorch-lightning = "^1.5.8"
-quaterion-models = { git = "https://${GITHUB_TOKEN}@github.com/qdrant/quaterion-models.git", branch = "master" }
+quaterion-models = ">=0.1.1"
 loguru = "^0.5.3"
 
 [tool.poetry.dev-dependencies]
