--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,5 +23,5 @@ loguru = "^0.5.3"
 pytest = "^6.2.5"
 
 [build-system]
-requires = ["poetry-core>=1.0.0", "setuptools"]
+requires = ["poetry-core>=1.0.0", "setuptools=59.5.0"]
 build-backend = "poetry.core.masonry.api"
