--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -31,6 +31,8 @@ jobs:
       run: |
         python -m pip install poetry
         poetry install
+        poetry run pip install 'setuptools==59.5.0' # temporary fix for https://github.com/pytorch/pytorch/pull/69904
+
     - name: Build package
       run: poetry build
     - name: Publish package
