--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip poetry
           poetry install
+          poetry run pip install 'setuptools==59.5.0' # temporary fix for https://github.com/pytorch/pytorch/pull/69904
 
       - name: Unit tests
         run: |
