--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,12 @@ quaterion-models = ">=0.1.5"
 loguru = "^0.5.3"
 mmh3 = "^3.0.0"
 
+
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
 ipdb = "^0.13.9"
+sphinx = "^4.4.0"
+
 
 [build-system]
 requires = ["poetry-core>=1.0.0", "setuptools==59.5.0"] # temporary fix for https://github.com/pytorch/pytorch/pull/69904
