--- a/.github/workflows/autoblack.yml
+++ b/.github/workflows/autoblack.yml
@@ -17,11 +17,11 @@ jobs:
       - name: Install Black
         run: pip install black
       - name: Run black --check .
-        run: black --check .
+        run: black --check --line-length 99 .
       - name: If needed, commit black changes to the pull request
         if: failure()
         run: |
-          black .
+          black --line-length 99 .
           git config --global user.name 'autoblack'
           git config --global user.email 'qdrant@users.noreply.github.com'
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
