--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -45,7 +45,7 @@ jobs:
 
     - name: Generate docs
       run: |
-        poetry run sphinx-apidoc -f -o docs/source quaterion
+        poetry run sphinx-apidoc -f -e -o docs/source quaterion
         poetry run sphinx-build docs/source docs/html
         git config --global user.name 'qdrant'
         git config --global user.email 'qdrant@users.noreply.github.com'
