--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-      - with:
+      with:
           - fetch-depth: 0
     - name: Set up Python
       uses: actions/setup-python@v2
