--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-          - fetch-depth: 0
+          fetch-depth: 0
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
