--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -23,5 +23,4 @@ jobs:
         git config --global user.email 'qdrant@users.noreply.github.com'
         git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
         git checkout $GITHUB_HEAD_REF
-        git commit -am "docs: auto-generate docs with sphinx" && git push || true
-        git push
+        git commit -am "docs: auto-generate docs with sphinx" && git pull && git push || true
