Create docs only on a push to master

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -1,5 +1,9 @@
 name: build-docs
-on: [pull_request]
+on:
+  push:
+    branches:
+      - 'master'
+      
 jobs:
   build:
     runs-on: ubuntu-latest
