fix: update branch to checkout #45

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -23,5 +23,5 @@ jobs:
         git config user.email 'qdrant@users.noreply.github.com'
         git config pull.rebase false
         git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
-        git checkout $GITHUB_HEAD_REF
+        git checkout $GITHUB_REF
         git add ./docs && git commit -m "docs: auto-generate docs with sphinx" && git pull && git push || true
