--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,12 +19,17 @@ pytorch-lightning = "^1.5.8"
 quaterion-models = ">=0.1.5"
 loguru = "^0.5.3"
 mmh3 = "^3.0.0"
+pytorch-metric-learning = {version = "^1.2.1", optional = true}
 
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
 ipdb = "^0.13.9"
 sphinx = "^4.4.0"
+
+
+[tool.poetry.extras]
+pytorch-metric-learning = ["pytorch-metric-learning"]
 
 
 [build-system]
