--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pytorch-metric-learning = {version = "^1.2.1", optional = true}
 pytest = "^6.2.5"
 ipdb = "^0.13.9"
 sphinx = "^4.4.0"
+pytorch-metric-learning = "^1.3.0"
 
 
 [tool.poetry.extras]
