--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,14 +19,14 @@ pytorch-lightning = "^1.5.8"
 quaterion-models = ">=0.1.6"
 loguru = "^0.5.3"
 mmh3 = "^3.0.0"
-pytorch-metric-learning = {version = "^1.2.1", optional = true}
+pytorch-metric-learning = {version = "^1.3.0", optional = true}
 
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
 ipdb = "^0.13.9"
 sphinx = "^4.4.0"
-pytorch-metric-learning = "^1.3.0"
+qdrant-sphinx-theme = { git = "https://github.com/qdrant/qdrant_sphinx_theme.git", branch = "master" }
 
 
 [tool.poetry.extras]
