--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ ipdb = "^0.13.9"
 sphinx = "^4.4.0"
 qdrant-sphinx-theme = { git = "https://github.com/qdrant/qdrant_sphinx_theme.git", branch = "master" }
 black = "^22.3.0"
+torchvision = "^0.12.0"
 
 
 [tool.poetry.extras]
