--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ loguru = "^0.5.3"
 mmh3 = "^3.0.0"
 pytorch-metric-learning = {version = "^1.3.0", optional = true}
 protobuf = ">= 3.9.2, <3.20"  # until https://github.com/PyTorchLightning/pytorch-lightning/issues/13159 is fixed
+rich = "^12.4.4"
 
 
 [tool.poetry.dev-dependencies]
