--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ mmh3 = "^3.0.0"
 pytorch-metric-learning = {version = "^1.3.0", optional = true}
 protobuf = ">= 3.9.2, <3.20"  # until https://github.com/PyTorchLightning/pytorch-lightning/issues/13159 is fixed
 rich = "^12.4.4"
+torchmetrics = "<=0.8.2" # Intil warning with `full_state_update` is fixed
 
 
 [tool.poetry.dev-dependencies]
