--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ protobuf = ">= 3.9.2, <3.20"  # until https://github.com/PyTorchLightning/pytorc
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
 ipdb = "^0.13.9"
-sphinx = "^4.4.0"
+sphinx = ">=5.0.1"
 qdrant-sphinx-theme = { git = "https://github.com/qdrant/qdrant_sphinx_theme.git", branch = "master" }
 black = "^22.3.0"
 torchvision = "^0.12.0"
