isor should go on well with black

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,4 +28,4 @@ repos:
     hooks:
       - id: isort
         name: "Sort Imports"
-        args: [ "--profile black" ]
+        args: ["--profile", "black"]
