--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: [3.8, 3.9, 3.10]  # [3.7, 3.8, 3.9] # - temporary disable due to Actions spend limit
+        python-version: [3.8, 3.9, "3.10"]  # [3.7, 3.8, 3.9] # - temporary disable due to Actions spend limit
         os: [ubuntu-latest] # [ubuntu-latest, macOS-latest, windows-latest]
 
     steps:
