--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ keywords = ["framework", "similarity-learning", "metric-learning", "similarity",
 python = ">=3.8,<3.11"
 torch = ">=1.8.2"
 pytorch-lightning = "^1.6.4"
-quaterion-models = "^0.1.16"
+quaterion-models = { git = "https://github.com/qdrant/quaterion-models.git", branch = "switch-head" }
 loguru = "^0.5.3"
 mmh3 = "^3.0.0"
 pytorch-metric-learning = {version = "^1.3.0", optional = true}
