--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,9 +14,8 @@ keywords = ["framework", "similarity-learning", "metric-learning", "similarity",
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
-torch = ">=1.8.2"
 pytorch-lightning = "^1.6.4"
-quaterion-models = "0.1.17"
+quaterion-models = "^0.1.17"
 loguru = "^0.5.3"
 mmh3 = "^3.0.0"
 pytorch-metric-learning = {version = "^1.3.0", optional = true}
