--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "quaterion"
-version = "0.1.31"
+version = "0.1.32"
 description = "Similarity Learning fine-tuning framework"
 authors = ["Quaterion Authors <team@quaterion.tech>"]
 packages = [
@@ -14,6 +14,7 @@ keywords = ["framework", "similarity-learning", "metric-learning", "similarity",
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.11"
+torch = ">=1.8.2"
 pytorch-lightning = "^1.6.4"
 quaterion-models = "^0.1.17"
 loguru = "^0.5.3"
