--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,8 +22,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip poetry
+          poetry cache clear --all
           poetry install
-          poetry run pip install 'setuptools>=59.5.0' # temporary fix for https://github.com/pytorch/pytorch/pull/69904
+          poetry run pip install 'setuptools==59.5.0' # temporary fix for https://github.com/pytorch/pytorch/pull/69904
 
       - name: Unit tests
         run: |
